package com.devmaster.goatfarm.events.enuns;

public enum EventType {
    COBERTURA,
    PARTO,
    MORTE,
    SAUDE,
    VACINACAO,
    TRANSFERENCIA,
    MUDANCA_PROPRIETARIO,
    PESAGEM,
    OUTRO
}

